pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__shared_artifacts_generate_one.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/shared-artifacts\", events)"
---
TestResult {
    events: [
        "select",
        "select",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "[shared]",
                name: "shared-secret",
                status: "Pending",
                target_type: "shared",
            },
            ArtifactState {
                target: "machine-one",
                name: "local-secret",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "local-secret",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "[shared]",
                name: "shared-secret",
                status: "Generating(GeneratingSubstate { step: Generate, output: \"\" })",
                target_type: "shared",
            },
            ArtifactState {
                target: "machine-one",
                name: "local-secret",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-two",
                name: "local-secret",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
