pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__simple_home_manager_generate_all.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/home-manager\", events)"
---
TestResult {
    events: [
        "generate_all",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "test",
                name: "artifact-one",
                status: "Pending",
                target_type: "homemanager",
            },
            ArtifactState {
                target: "test",
                name: "artifact-two",
                status: "Pending",
                target_type: "homemanager",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "test",
                name: "artifact-one",
                status: "Pending",
                target_type: "homemanager",
            },
            ArtifactState {
                target: "test",
                name: "artifact-two",
                status: "Pending",
                target_type: "homemanager",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
