pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__two_artifacts_select_second.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/two-artifacts-no-prompts\", events)"
---
TestResult {
    events: [
        "navigate_down(1)",
        "select",
        "fill_prompts([])",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-name",
                name: "artifact-two",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 1,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "machine-name",
                name: "artifact-one",
                status: "Pending",
                target_type: "nixos",
            },
            ArtifactState {
                target: "machine-name",
                name: "artifact-two",
                status: "Generating(GeneratingSubstate { step: Generate, output: \"\" })",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
