pkgs/artifacts/tests/tui/snapshots/tests__tui__integration_tests__unwanted_files_shows_error.snap
---
source: tests/tui/integration_tests.rs
expression: "run_tui(\"scenarios/error-unwanted-files\", events)"
---
TestResult {
    events: [
        "select",
        "fill_prompts([\"one\", \"two\"])",
        "quit",
    ],
    before: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "unwanted-files",
                name: "test-artifact",
                status: "Pending",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    after: ModelState {
        screen: "ArtifactList",
        selected_index: 0,
        selected_log_step: "Check",
        active_prompt: None,
        artifacts: [
            ArtifactState {
                target: "unwanted-files",
                name: "test-artifact",
                status: "Generating(GeneratingSubstate { step: Generate, output: \"\" })",
                target_type: "nixos",
            },
        ],
        error: None,
        warnings_count: 0,
    },
    serialized_artifacts: {},
}
